k8s/service-two.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-two-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: service-two
  template:
    metadata:
      labels:
        component: service-two
    spec:
      containers:
        - name: service-two
          image: service-two:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent # Do not pull from Docker Hub
          ports:
            - containerPort: 8200
---
apiVersion: v1
kind: Service
metadata:
  name: service-two-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: service-two
  ports:
    - port: 8200
      targetPort: 8200
