k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /one(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-one-cluster-ip
                port:
                  number: 8100
          - path: /two(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-two-cluster-ip
                port:
                  number: 8200
